fix(index.html): move file index from src to root

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./output.css" />
+    <link rel="stylesheet" href="./src/output.css" />
     <title>Judul Halaman Anda</title>
   </head>
 
@@ -113,7 +113,7 @@
           <div class="w-full self-end px-4 lg:w-1/2">
             <div class="relative mt-10 lg:mt-9 lg:right-0">
               <img
-                src="../dist/img/ivandi.png"
+                src="./dist/img/ivandi.png"
                 alt="Ivandi Yudistiawan"
                 class="max-w-full mx-auto"
                 id="ivan-img"
@@ -261,7 +261,7 @@
             <div class="overflow-hidden rounded-md shadow-md">
               <img
                 class="hover:scale-110 transition-all transform duration-300"
-                src="../dist/img/Portofolio/ivan1.jpeg"
+                src="./dist/img/Portofolio/ivan1.jpeg"
                 alt="Landing Page"
                 width="w-full"
               />
@@ -283,7 +283,7 @@
             <div class="overflow-hidden rounded-md shadow-md">
               <img
                 class="hover:scale-110 transition-all transform duration-300"
-                src="../dist/img/Portofolio/ivan2.jpeg"
+                src="./dist/img/Portofolio/ivan2.jpeg"
                 alt="E-Commerce"
                 width="w-full"
               />
@@ -306,7 +306,7 @@
             <div class="overflow-hidden rounded-md shadow-md">
               <img
                 class="hover:scale-110 transition-all transform duration-300"
-                src="../dist/img/Portofolio/ivan3.jpeg"
+                src="./dist/img/Portofolio/ivan3.jpeg"
                 alt="Technical Documentation"
                 width="w-full"
               />
@@ -326,7 +326,7 @@
             <div class="overflow-hidden rounded-md shadow-md">
               <img
                 class="hover:scale-110 transition-all transform duration-300"
-                src="../dist/img/Portofolio/ivan4.jpeg"
+                src="./dist/img/Portofolio/ivan4.jpeg"
                 alt="Tribute Page"
                 width="w-full"
               />
@@ -578,6 +578,6 @@
       );
     </script>
 
-    <script src="../dist/img/js/script.js"></script>
+    <script src="./dist/img/js/script.js"></script>
   </body>
 </html>
