--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
           <div class="w-full self-end px-4 lg:w-1/2">
             <div class="relative mt-10 lg:mt-9 lg:right-0">
               <img
-                src="./dist/img/ivandi.png"
+                src="./dist/img/ivan.png"
                 alt="Ivandi Yudistiawan"
                 class="max-w-full mx-auto"
                 id="ivan-img"
